First real writing

--- a/Survey Statistics/chapter1.Rmd
+++ b/Survey Statistics/chapter1.Rmd
@@ -3,10 +3,11 @@ title_meta  : Chapter 1
 title       : Survey Statistics
 description : Introduction to Survey Statistics
 
----
+---type:NormalExercise xp:100
+
 ## Welcome to an introduction to Survey Statistics
 
-In this course you will learn methods frequently used to manage and analyze survey data. Survey data is used in a variety of fields including Public Health, Economics, Political Science, and Data Science. The US Census, the National Health Interview Survey, The National Health and Nutrition Examination Survey, The California Health Interview Survey, and Nielsen Ratings are some examples of survey datasets. 
+In this course you will learn methods frequently used to manage and analyze survey data. Survey data is used in a variety of fields including Public Health, Economics, Political Science, and Data Science. The US Census, the National Health Interview Survey, The National Health and Nutrition Examination Survey, The California Health Interview Survey, Nielsen Ratings, and Election Polling are some examples of survey datasets. 
 
 R is well suited to handle survey statistics using the "survey" package developed by Thomas Lumley. Lumley's book "Complex Surveys: A guide to Analysis Using R" is the main resource for this course, and it is highly recommended.
 
@@ -32,183 +33,139 @@ library("survey")
 success_msg("Well done! Continue!")
 ```
 
----
-## Take a Look at a Survey
+---type:MultipleChoiceExercise xp:100
 
-In this exercise we will look at survey. In the workspace there is a dataframe named apisrs. 
+## Random Samples
+
+Suppose a school takes a random sample of test scores of their students, and wants to estimate the average score across the school's entire population.
+
+Lets say their are 1000 students at the school and we sample 200 of them. Each student has an equal probability of being selected into the sample.
+
+What is the probability that any one student is sampled?
 
 *** =instructions
-- Look at the first 5 rows and the structure of apisrs.
+- 1/4
+- 1/5
+- 1/2
+- 1/3
 
 
 *** =hint
+What is 200 divided by 1000?
 
-
-*** =pre_exercise_code
-```{r,eval=FALSE}
-install.packages("survey")
-library("survey")
-data(api)
-```
-
-*** =sample_code
-```{r,eval=FALSE}
-# Assign the value 5 to 'x'
-
-
-# Assign 'y' to 'z'
-
-```
-
-*** =solution
-```{r,eval=FALSE}
-# Assign the value 5 to 'x'
-x <- 5
-
-# Assign 'y' to 'z'
-z <- y
-```
 
 *** =sct
 ```{r,eval=FALSE}
-test_object("x", undefined_msg = "Are you sure you have defined the variable <code>x</code>?",
-            incorrect_msg = "Make sure to correctly specify the variable <code>x</code>")
-test_object("z", undefined_msg = "Are you sure you have defined the variable <code>y</code>?",
-            incorrect_msg = "Make sure to correctly specify the variable <code>y</code>")
-success_msg("Awesome job! Continue to the next exercise")
+msg1 = "Nope. Try again"
+msg2 = "Well done!"
+
+test_mc(correct = 2, feedback_msgs = c(msg1,msg2,msg1,msg1))
 ```
+---type:NormalExercise xp:100
 
---- type:MultipleChoiceExercise
-## This is a multiple choice exercise!
+## Weights
 
-The multiple choice exercise (remark the `type:` specification after the triple dashes above the title) does not need sample code, nor a solution.
+Consider the example from the previous question. Imagine the school wants to estimate the number of students with failing grades.
+
+To extrapolate from the sample to the whole population, one makes each observation in the sample represent a larger number of people. 
 
 *** =instructions
-- Wrong option
-- Correct option 
-- Wrong option
-  
+-Already loaded is a dataset with the test scores of 200 students
+-Look at the first 5 rows and the structure of the dataset
+
+
 *** =hint
-Hint here. 
-
-*** =pre_exercise_code
-```{r,eval=FALSE}
-```
-
-*** =sct
-```{r,eval=FALSE}
-test_mc(correct = 2, feedback_msgs = c("Wrong, try again.","Good job!","Try again please"))
-```
-
---- type:VideoExercise
-## This exercise contains a video!
-
-You can add a description here, but this is optional.
-
-*** =video_link
-```{r,eval=FALSE}
-//player.vimeo.com/video/108225030
-```
-
---- type:MarkdownExercise
-## Markdown Exercise Title
- 
-The assignment of this markdown exercise (remark the `type:` specification after the triple dashes above the title) comes here.
-Custom CSS is an easy way to add branding to your reports. 
-
-*** =instructions
-- The `styles.css` file to the right contains some example CSS that will change the appearance of your report. Modify the header of the .Rmd report to use the CSS, and then render the report.
-- In the code chunk, assign `5` to the variable `x`.
-
-*** =hint 
-This exercise only expect you to edit the YAML header, not the actual .css file.
+If you don't remember the head and str functions use ?
 
 *** =pre_exercise_code
 ```{r eval=FALSE}
+schoolkids<-read.csv("childdata.csv")
 ```
 
 *** =sample_code
 ```{r eval=FALSE}
-{{{my_document.Rmd}}}
----
-title: "Tryout"
-output: html_document
----
+# The dataframe schoolkids is already loaded
+# Read the first five rows of schoolkids
 
-This sample R Markdown document contains a list:
-  
-* A
-* B
 
-It also contains some code:
-  
-_tbt_{r}
-x <-
-_tbt_
-```
+# Read the structure of schoolkids
 
-```{r, eval = FALSE}
-{{{styles.css}}}
-h1{
-  color: white;
-  padding: 10px;
-  background-color: #3399ff
-}
 
-ul {
-  list-style-type: square;  
-}
 ```
 
 *** =solution
-
 ```{r eval=FALSE}
-{{{my_solution.Rmd}}}
----
-title: "Tryout"
-output: 
-  html_document:
-    css: styles.css
----
+# The dataframe schoolkids is already loaded
+# Read the first five rows of schoolkids
+head(schoolkids)
 
-This sample R Markdown document contains a list:
-  
-* A
-* B
+# Read the structure of schoolkids
+str(schoolkids)
 
-It also contains some code:
-  
-_tbt_{r}
-x <- 5
-_tbt_
-```
-
-```{r, eval = FALSE}
-{{{styles.css}}}
-h1{
-  color: white;
-  padding: 10px;
-  background-color: #3399ff
-}
-
-ul {
-  list-style-type: square;  
-}
 ```
 
 *** =sct
 ```{r eval=FALSE}
-test_error()
-test_rmd_file({
-  test_yaml_header(options = "title")
-  test_yaml_header(options = "output.html_document.css", 
-                   not_called_msg = "Have you specified the <code>css</code> option under <code>html_document</code>, which in turn is under option <code>output</code>?", 
-                   incorrect_msg = "Make sure to set the <code>css</code> option correctly.")
-  test_rmd_group(2, {
-    test_object("x", 
-                undefined_msg = "Have you defined the variable <code>x</code> inside the code chunk?", 
-                incorrect_msg = "Make sure to define the variable <code>x</code> correctly inside the code chunk.")
-  })
-})
-success_msg("Nice work! It's easy to add styling to your report!")  
+test_object(head(schoolkids), 
+            undefined_msg = "Please make sure to print the first 5 rows",
+            incorrect_msg = "Please make sure to print the first 5 rows")
+test_object(str(schoolkids), undefined_msg="Please look at the structure of the dataset.",
+            incorrect_msg="Please look at the structure of the dataset."
+success_msg("Great! Head over to the next exercise.")
+```
+
+---type:NormalExercise xp:100
+
+## Creating Weights
+
+One of the main concepts of survey statistics is sampling weights. Remember the probability of any student being sampled was 1/5.
+
+That means that if we make each student in the sample represent 5 students, the inverse of the probability of being sampled, then we get an unbiased estimate.
+
+The Horvits-Thompson estimator is used to measure population totals from samples. The formula
+
+*** =instructions
+-Add a weight variable to the schoolkids dataframe
+-Write a function that 
+-Look at the first 5 rows and the structure of the dataset
+
+
+*** =hint
+If you don't remember the head and str functions use ?
+
+*** =pre_exercise_code
+```{r eval=FALSE}
+schoolkids<-read.csv("childdata.csv")
+```
+
+*** =sample_code
+```{r eval=FALSE}
+# The dataframe schoolkids is already loaded
+# Read the first five rows of schoolkids
+
+
+# Read the structure of schoolkids
+
+
+```
+
+*** =solution
+```{r eval=FALSE}
+# The dataframe schoolkids is already loaded
+# Read the first five rows of schoolkids
+head(schoolkids)
+
+# Read the structure of schoolkids
+str(schoolkids)
+
+```
+
+*** =sct
+```{r eval=FALSE}
+test_object(head(schoolkids), 
+            undefined_msg = "Please make sure to print the first 5 rows",
+            incorrect_msg = "Please make sure to print the first 5 rows")
+test_object(str(schoolkids), undefined_msg="Please look at the structure of the dataset.",
+            incorrect_msg="Please look at the structure of the dataset."
+success_msg("Great! Head over to the next exercise.")
 ```
