--- a/Survey Statistics/chapter1.Rmd
+++ b/Survey Statistics/chapter1.Rmd
@@ -9,7 +9,7 @@ description : Introduction to Survey Statistics
 
 In this course you will learn methods frequently used to manage and analyze survey data. Survey data is used in a variety of fields including Public Health, Economics, Political Science, and Data Science. The US Census, the National Health Interview Survey, The National Health and Nutrition Examination Survey, The California Health Interview Survey, Nielsen Ratings, and Election Polling are some examples of survey datasets. 
 
-R is well suited to handle survey statistics using the "survey" package developed by Thomas Lumley. Lumley's book "Complex Surveys: A guide to Analysis Using R" is the main resource for this course, and it is highly recommended.
+R is well suited to handle survey statistics using the "survey" package developed by Thomas Lumley. Lumley's book *Complex Surveys: A Guide to Analysis Using R* is the main resource for this course, and it is highly recommended.
 
 
 
@@ -39,15 +39,15 @@ success_msg("Well done! Continue!")
 
 Suppose a school takes a random sample of test scores of their students, and wants to estimate the average score across the school's entire population.
 
-Lets say their are 1000 students at the school and we sample 200 of them. Each student has an equal probability of being selected into the sample.
+Lets say their are $1000$ students at the school and we sample $200$ of them. Each student has an equal probability of being selected into the sample.
 
-What is the probability that any one student is sampled?
+What is the probability, $\pi_i$, that any one student is sampled?
 
 *** =instructions
-- 1/4
-- 1/5
-- 1/2
-- 1/3
+- $\frac{1}{4}$
+- $\frac{1}{5}$
+- $\frac{1}{2}$
+- $\frac{1}{3}$
 
 
 *** =hint
@@ -63,16 +63,16 @@ test_mc(correct = 2, feedback_msgs = c(msg1,msg2,msg1,msg1))
 ```
 ---type:NormalExercise xp:100
 
-## Weights
+## Sampling Weights
 
-Consider the example from the previous question. Imagine the school wants to estimate the number of students with failing grades.
+One of the main concepts of survey statistics is sampling weights. The formula for sampling weights is $$ sampling weight=\frac{1}{\pi_i} $$ Where $\pi_i$ is the probability of person *i* being sampled.
 
-To extrapolate from the sample to the whole population, one makes each observation in the sample represent a larger number of people. 
+Consider the example from the previous problem. Each student has a $\pi_i=\frac{1}{5}$ so the sampling weight equals $5$.
 
 *** =instructions
--Already loaded is a dataset with the test scores of 200 students
--Look at the first 5 rows and the structure of the dataset
-
+-Already loaded is a dataset with the test scores of 200 students.
+-Look at the first 5 rows and the structure of the dataset.
+-Set the variable `{r} samplingWeight` equal to the correct value. 
 
 *** =hint
 If you don't remember the head and str functions use ?
@@ -90,6 +90,8 @@ schoolkids<-read.csv("childdata.csv")
 
 # Read the structure of schoolkids
 
+# Set samplingWeight equal to the sampling weight
+samplingWeight<-_____
 
 ```
 
@@ -102,6 +104,9 @@ head(schoolkids)
 # Read the structure of schoolkids
 str(schoolkids)
 
+# Set samplingWeight equal to the sampling weight
+samplingWeight<-5
+
 ```
 
 *** =sct
@@ -110,62 +115,69 @@ test_object(head(schoolkids),
             undefined_msg = "Please make sure to print the first 5 rows",
             incorrect_msg = "Please make sure to print the first 5 rows")
 test_object(str(schoolkids), undefined_msg="Please look at the structure of the dataset.",
-            incorrect_msg="Please look at the structure of the dataset."
+            incorrect_msg="Please look at the structure of the dataset.")
+test_object(samplingWeight<-5, undefined_msg="Please assign a value to samplingWeight.",
+            incorrect_msg="Did you assign the correct value to samplingWeight?")
 success_msg("Great! Head over to the next exercise.")
 ```
 
----type:NormalExercise xp:100
+#Horvits-Thompson Estimator
 
-## Creating Weights
+The Horvits-Thompson estimator approximates the population total by summing the weighted observations. Continueing with the previous example, the formula for the Horvits-Thompson estimator of total student test scores is
 
-One of the main concepts of survey statistics is sampling weights. Remember the probability of any student being sampled was 1/5.
-
-That means that if we make each student in the sample represent 5 students, the inverse of the probability of being sampled, then we get an unbiased estimate.
-
-The Horvits-Thompson estimator is used to measure population totals from samples. The formula
+$E[T_{score}]=\sum\limits_{i=1}^N \frac{1}{\pi_i} * score_i * \pi_i=\sum\limits_{i=1}^N score_i= T_{score}$
 
 *** =instructions
--Add a weight variable to the schoolkids dataframe
--Write a function that 
--Look at the first 5 rows and the structure of the dataset
-
+-Add a variable to the dataset named `{r}samplingweight` that is equal to the `{r}samplingweight` variable you created in the last exercise.
+-Using the Horvits-Thompson Estimator and set the variable `{r} totalScore` equal to the estimtated total score of the school.
+-Estimate the average score for the school.
 
 *** =hint
-If you don't remember the head and str functions use ?
+The Horvits-Thompson Estimator formula in *R* code looks like `{r} sum(samplingWeight*score)`
 
 *** =pre_exercise_code
 ```{r eval=FALSE}
 schoolkids<-read.csv("childdata.csv")
+samplingWeight<-5
 ```
 
 *** =sample_code
 ```{r eval=FALSE}
 # The dataframe schoolkids is already loaded
-# Read the first five rows of schoolkids
+# The variable samplingWeight is already loaded
 
+# Create a new variable in schoolkids equal to samplingWeight
+schoolkids$samplingWeight<-_____
 
-# Read the structure of schoolkids
+# Assign the sum of the students' scores multiplied by their weights
+totalScore<-sum(_____)
 
+# Estimate the average for the whole school. Remember there are 1000 students
+scoreAverage<-_____
 
 ```
 
 *** =solution
 ```{r eval=FALSE}
 # The dataframe schoolkids is already loaded
-# Read the first five rows of schoolkids
-head(schoolkids)
+# The variable samplingWeight is already loaded
 
-# Read the structure of schoolkids
-str(schoolkids)
+# Create a new variable in schoolkids equal to samplingWeight
+schoolkids$samplingWeight<-samplingWeight
+
+# Assign the sum of the students' scores multiplied by their weights
+totalScore<-sum(schoolkids$score*schoolkids$samplingWeight)
+
+# Estimate the average for the whole school. Remember there are 1000 students
+scoreAverage<-totalScore/1000
 
 ```
 
 *** =sct
 ```{r eval=FALSE}
-test_object(head(schoolkids), 
-            undefined_msg = "Please make sure to print the first 5 rows",
-            incorrect_msg = "Please make sure to print the first 5 rows")
-test_object(str(schoolkids), undefined_msg="Please look at the structure of the dataset.",
-            incorrect_msg="Please look at the structure of the dataset."
-success_msg("Great! Head over to the next exercise.")
+test_object(schoolkids$samplingWeight<-samplingWeight, 
+            undefined_msg = "Did you assign a value to schoolkids$samplingWeight?",
+            incorrect_msg = "Did you use samplingWeight?")
+
+success_msg("Great! But remember that our result is just an estimate.")
 ```
